[gd_scene load_steps=9 format=3 uid="uid://dia0lm83rgwt5"]

[ext_resource type="Theme" uid="uid://c36ywjvt5x7kl" path="res://Assets/GuiThemes/MainTheme.tres" id="1_3vvtf"]
[ext_resource type="Script" path="res://Frames/AccountMenu/AccountMenu.gd" id="2_2eklc"]
[ext_resource type="Texture2D" uid="uid://ba0f43yyknuis" path="res://Assets/Sprites/Backgrounds/space background.png" id="3_keic3"]
[ext_resource type="PackedScene" uid="uid://b7tr4uqi53m6d" path="res://Scenes/Particles/Stars/particles.tscn" id="4_m8i63"]
[ext_resource type="Texture2D" uid="uid://cme36b6m2os3v" path="res://Assets/Sprites/Backgrounds/blackborders.png" id="5_wvmml"]
[ext_resource type="Texture2D" uid="uid://s7qgfbeil2y6" path="res://Assets/Gui/Title.png" id="7_aoe3o"]
[ext_resource type="PackedScene" uid="uid://57kdei6jtv5o" path="res://Scenes/GuiScenes/Blueprints/Animation.tscn" id="7_r1hey"]
[ext_resource type="Script" path="res://Frames/World/Notifications.gd" id="8_fblek"]

[node name="AccountMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(480, 270)
theme = ExtResource("1_3vvtf")
script = ExtResource("2_2eklc")

[node name="SpaceBackground" type="Sprite2D" parent="."]
position = Vector2(512, 270)
texture = ExtResource("3_keic3")

[node name="Particles" parent="." instance=ExtResource("4_m8i63")]

[node name="Blackborders" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(480, 270)
texture = ExtResource("5_wvmml")

[node name="Credentials" type="TabContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -102.0
offset_right = 146.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(144, 102)
current_tab = 0

[node name="Login" type="Control" parent="Credentials"]
layout_mode = 2
metadata/_tab_index = 0

[node name="UsernameEdit" type="LineEdit" parent="Credentials/Login"]
layout_mode = 0
offset_left = 18.0
offset_top = 19.0
offset_right = 253.0
offset_bottom = 51.0
placeholder_text = "Enter a username"
alignment = 1
max_length = 32
context_menu_enabled = false

[node name="PasswordEdit" type="LineEdit" parent="Credentials/Login"]
layout_mode = 0
offset_left = 18.0
offset_top = 67.0
offset_right = 253.0
offset_bottom = 99.0
placeholder_text = "Enter a password"
alignment = 1
max_length = 256
context_menu_enabled = false
secret = true
secret_character = "*"

[node name="UsernameLabel" type="Label" parent="Credentials/Login"]
layout_mode = 0
offset_left = 18.0
offset_top = 1.0
offset_right = 252.0
offset_bottom = 21.0
text = "Username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordLabel" type="Label" parent="Credentials/Login"]
layout_mode = 0
offset_left = 18.0
offset_top = 48.0
offset_right = 252.0
offset_bottom = 71.0
text = "Password
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoginButton" type="Button" parent="Credentials/Login"]
layout_mode = 0
offset_left = 177.0
offset_top = 135.0
offset_right = 272.0
offset_bottom = 163.0
focus_mode = 0
text = " Login
"

[node name="HelpButton" type="Button" parent="Credentials/Login"]
layout_mode = 0
offset_left = -2.0
offset_top = 135.0
offset_right = 110.0
offset_bottom = 163.0
focus_mode = 0
disabled = true
text = " Need help?"

[node name="Create" type="Control" parent="Credentials"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="UsernameEdit" type="LineEdit" parent="Credentials/Create"]
layout_mode = 0
offset_left = 18.0
offset_top = 19.0
offset_right = 253.0
offset_bottom = 51.0
placeholder_text = "Enter a username"
alignment = 1
max_length = 32
context_menu_enabled = false

[node name="PasswordEdit" type="LineEdit" parent="Credentials/Create"]
layout_mode = 0
offset_left = 18.0
offset_top = 67.0
offset_right = 253.0
offset_bottom = 99.0
placeholder_text = "Enter a password"
alignment = 1
max_length = 256
context_menu_enabled = false
secret = true
secret_character = "*"

[node name="UsernameLabel" type="Label" parent="Credentials/Create"]
layout_mode = 0
offset_left = 18.0
offset_right = 252.0
offset_bottom = 23.0
text = "Username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordLabel" type="Label" parent="Credentials/Create"]
layout_mode = 0
offset_left = 18.0
offset_top = 48.0
offset_right = 252.0
offset_bottom = 71.0
text = "Password
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreateButton" type="Button" parent="Credentials/Create"]
layout_mode = 0
offset_left = 177.0
offset_top = 135.0
offset_right = 272.0
offset_bottom = 163.0
focus_mode = 0
text = " Create"

[node name="HelpButton" type="Button" parent="Credentials/Create"]
layout_mode = 0
offset_left = -2.0
offset_top = 135.0
offset_right = 110.0
offset_bottom = 163.0
focus_mode = 0
disabled = true
text = " Need help?"

[node name="AnimationPlayer" parent="Credentials" instance=ExtResource("7_r1hey")]
root_node = NodePath("../..")

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 384.0
offset_right = 960.0
offset_bottom = 458.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(487, 76)
scale = Vector2(1.475, 1.475)
texture = ExtResource("7_aoe3o")

[node name="CloseButton" type="Button" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.5
offset_top = -46.0
offset_right = 45.5
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
text = "Close"

[node name="Label" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_left = 5.0
offset_top = 494.0
offset_right = 251.0
offset_bottom = 540.0
theme_override_font_sizes/font_size = 20
text = "Alpha Version 1.0
Original Game by RaoK, Adam, & 8Bit"

[node name="Label2" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_left = 709.0
offset_top = 494.0
offset_right = 955.0
offset_bottom = 540.0
theme_override_font_sizes/font_size = 20
text = "Godot 4 Port by Walid
Godot 3 Remake by Sundae and Walid"
horizontal_alignment = 2

[node name="Notifications" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -270.0
offset_bottom = 270.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
script = ExtResource("8_fblek")

[node name="VBoxContainer" type="VBoxContainer" parent="Notifications"]
layout_mode = 1
anchors_preset = -1
anchor_left = -4.424
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0480347
offset_bottom = -142.0
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 35
alignment = 2

[node name="RememberMe" type="CheckBox" parent="."]
z_index = 5
layout_mode = 2
offset_left = 365.0
offset_top = 316.0
offset_right = 464.0
offset_bottom = 344.0
text = "Remember me"

[connection signal="pressed" from="Credentials/Login/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="Credentials/Create/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="toggled" from="RememberMe" to="." method="_on_remember_me_toggled"]
